fix header-two layout on mobile view

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,8 +56,8 @@ body {
 
 .header-one {
   padding: 1em;
-  display: flex;
-  flex-direction: column-reverse;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2em;
 }
 
@@ -67,6 +67,7 @@ body {
 
 .btn-cont {
   display: flex;
+  justify-content: flex-end;
   gap: 1.5em;
 }
 
@@ -97,7 +98,7 @@ body {
 }
 
 #search-bar {
-  width: max(40vw, 210px);
+  width: max(40vw, 250px);
   border-radius: 50px;
   border-style: none;
   background-color: var(--maincont-searchbar-col);
